# neuroguardian-ai-agent

./: README.md  main.py  pyproject.toml
backend/: main.py
backend/agent/: controller_agent.py  memory_agent.py  reminder_agent.py  ui_navigator_agent.py  vision_agent.py
backend/memory/: family_profiles.json
backend/routes/: agent_routes.py  alert_routes.py  emotion_routes.py  family_voice_routes.py  story_routes.py
backend/services/: care_agent.py  emotion_service.py  emotion_vision_service.py  family_voice_service.py  firestore_service.py  gemini_live_service.py  persona_agent.py  persona_service.py  speech_service.py  vision_agent.py
backend/streaming/: bidi_agent.py
deployment/backend/: Dockerfile  cloudbuild.yaml
frontend/: .firebaserc  .gitignore  package-lock.json  package.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/services/: streamClient.js
frontend/src/: App.jsx
frontend/src/components/: ActionPanel.jsx  CaregiverAlert.jsx  ScreenCapture.jsx  StoryButton.jsx  VideoInput-bkp.jsx  VideoInput.jsx  VoiceChat.jsx
frontend/src/services/: apiClient.js
