[project]
name = "neuroguardian-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "google-adk>=1.27.1",
    "google-cloud-firestore>=2.25.0",
    "google-cloud-pubsub>=2.36.0",
    "google-cloud-storage>=3.9.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
